src/test/ui/impl-trait/hidden-type-is-opaque-2.stderr
error[E0282]: type annotations needed
  --> $DIR/hidden-type-is-opaque-2.rs:6:17
   |
LL |     Thunk::new(|mut cont| {
   |                 ^^^^^^^^ consider giving this closure parameter a type
   |
   = note: type must be known at this point

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
